// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconBox [common] example testing should match snapshot(s) for 0_default 1`] = `
<figure
  className="lucid-IconBox lucid-IconBox-has-only-icon"
  disabled={false}
  onClick={[Function]}
>
  <Icon
    aspectRatio="xMidYMid meet"
    isBadge={false}
    isDisabled={false}
    size={16}
    viewBox="0 0 16 16"
  >
    <rect
      height="16"
      width="16"
      x="0"
      y="0"
    />
    <rect
      fill="white"
      height="14"
      width="14"
      x="1"
      y="1"
    />
  </Icon>
  <figcaption
    className="lucid-IconBox-figcaption"
  >
    <RadioButtonLabeled
      Label={
        Array [
          "Default",
        ]
      }
      className="lucid-IconBox-radio"
      isDisabled={false}
      isSelected={false}
      onSelect={[Function]}
    />
  </figcaption>
</figure>
`;

exports[`IconBox [common] example testing should match snapshot(s) for 1_checkbox 1`] = `
<figure
  className="lucid-IconBox lucid-IconBox-checkbox lucid-IconBox-has-only-icon"
  disabled={false}
  onClick={[Function]}
>
  <ClockIcon />
  <figcaption
    className="lucid-IconBox-figcaption"
  >
    <CheckboxLabeled
      Label={
        Array [
          "Checkbox",
        ]
      }
      className="lucid-IconBox-checkbox"
      isDisabled={false}
      isIndeterminate={false}
      isSelected={false}
      onSelect={[Function]}
    />
  </figcaption>
</figure>
`;

exports[`IconBox [common] example testing should match snapshot(s) for 2_radio 1`] = `
<figure
  className="lucid-IconBox lucid-IconBox-radio lucid-IconBox-has-only-icon"
  disabled={false}
  onClick={[Function]}
>
  <ClockIcon />
  <figcaption
    className="lucid-IconBox-figcaption"
  >
    <RadioButtonLabeled
      Label={
        Array [
          "Radio",
        ]
      }
      className="lucid-IconBox-radio"
      isDisabled={false}
      isSelected={false}
      onSelect={[Function]}
    />
  </figcaption>
</figure>
`;

exports[`IconBox [common] example testing should match snapshot(s) for 3.states 1`] = `
<figure
  className="lucid-IconBox lucid-IconBox-checkbox lucid-IconBox-has-only-icon"
  disabled={false}
  onClick={[Function]}
>
  <ClockIcon />
  <figcaption
    className="lucid-IconBox-figcaption"
  >
    <CheckboxLabeled
      Label={
        Array [
          "Active",
        ]
      }
      className="lucid-IconBox-checkbox"
      isDisabled={false}
      isIndeterminate={false}
      isSelected={false}
      onSelect={[Function]}
    />
  </figcaption>
</figure>
`;

exports[`IconBox [common] example testing should match snapshot(s) for 3.states 2`] = `
<figure
  className="lucid-IconBox lucid-IconBox-is-disabled lucid-IconBox-checkbox lucid-IconBox-has-only-icon"
  disabled={true}
  onClick={[Function]}
>
  <ClockIcon />
  <figcaption
    className="lucid-IconBox-figcaption"
  >
    <CheckboxLabeled
      Label={
        Array [
          "Disabled",
        ]
      }
      className="lucid-IconBox-checkbox"
      isDisabled={true}
      isIndeterminate={false}
      isSelected={false}
      onSelect={[Function]}
    />
  </figcaption>
</figure>
`;

exports[`IconBox [common] example testing should match snapshot(s) for 3.states 3`] = `
<figure
  className="lucid-IconBox lucid-IconBox-checkbox lucid-IconBox-has-only-icon"
  disabled={false}
  onClick={[Function]}
>
  <ClockIcon />
  <figcaption
    className="lucid-IconBox-figcaption"
  >
    <CheckboxLabeled
      Label={
        Array [
          "Indeterminate",
        ]
      }
      className="lucid-IconBox-checkbox"
      isDisabled={false}
      isIndeterminate={true}
      isSelected={false}
      onSelect={[Function]}
    />
  </figcaption>
</figure>
`;

exports[`IconBox [common] example testing should match snapshot(s) for 3.states 4`] = `
<figure
  className="lucid-IconBox lucid-IconBox-is-selected lucid-IconBox-checkbox lucid-IconBox-has-only-icon"
  disabled={false}
  onClick={[Function]}
>
  <ClockIcon />
  <figcaption
    className="lucid-IconBox-figcaption"
  >
    <CheckboxLabeled
      Label={
        Array [
          "Selected",
        ]
      }
      className="lucid-IconBox-checkbox"
      isDisabled={false}
      isIndeterminate={false}
      isSelected={true}
      onSelect={[Function]}
    />
  </figcaption>
</figure>
`;

exports[`IconBox [common] example testing should match snapshot(s) for 7.interactive 1`] = `
<figure
  className="lucid-IconBox lucid-IconBox-is-selected lucid-IconBox-checkbox lucid-IconBox-has-only-icon"
  disabled={false}
  onClick={[Function]}
>
  <ClockIcon />
  <figcaption
    className="lucid-IconBox-figcaption"
  >
    <CheckboxLabeled
      Label={
        Array [
          "Interactive",
        ]
      }
      className="lucid-IconBox-checkbox"
      isDisabled={false}
      isIndeterminate={false}
      isSelected={true}
      onSelect={[Function]}
    />
  </figcaption>
</figure>
`;

exports[`IconBox [common] example testing should match snapshot(s) for 8_no-label 1`] = `
<figure
  className="lucid-IconBox lucid-IconBox-has-only-icon"
  disabled={false}
  onClick={[Function]}
>
  <ClockIcon />
  <figcaption
    className="lucid-IconBox-figcaption"
  >
    <RadioButtonLabeled
      Label={Array []}
      className="lucid-IconBox-radio"
      isDisabled={false}
      isSelected={false}
      onSelect={[Function]}
    />
  </figcaption>
</figure>
`;

exports[`IconBox [common] example testing should match snapshot(s) for 9_as-props 1`] = `
<figure
  className="lucid-IconBox lucid-IconBox-checkbox lucid-IconBox-has-only-icon"
  disabled={false}
  onClick={[Function]}
>
  <ClockIcon />
  <figcaption
    className="lucid-IconBox-figcaption"
  >
    <CheckboxLabeled
      Label={
        Array [
          "As Props",
        ]
      }
      className="lucid-IconBox-checkbox"
      isDisabled={false}
      isIndeterminate={false}
      isSelected={false}
      onSelect={[Function]}
    />
  </figcaption>
</figure>
`;
